Fixed several Themes

--- a/cyclope/media/themes/neutronix/css/jcarousel.less
+++ b/cyclope/media/themes/neutronix/css/jcarousel.less
@@ -23,6 +23,9 @@ DEFAULTS
     background: @colora;
     margin-bottom: 20px;}
 
+.jcarousel-skin-cyclope .jcarousel-container .type_icon {
+  display:none;}
+
 /*------------------
 HORIZONTAL BUTTONS
 -------------------*/
@@ -159,7 +162,7 @@ MODE IMAGE BACKGROUND VIEW
 -------------------*/
 
 .slideshow-background .jcarousel-skin-cyclope .jcarousel-container-horizontal {
-    width: 530px;
+    width: 550px;
     padding: 0;}
 
 
@@ -254,4 +257,5 @@ MODE IMAGE BACKGROUND VIEW
 #spark .slideshow-background li { 
   padding:0 !important;
   margin:0 !important;}  
+
 
