--- a/cyclope/media/themes/cyorg/css/cyclope.less
+++ b/cyclope/media/themes/cyorg/css/cyclope.less
@@ -107,15 +107,13 @@ border-top-left-radius:6px;
 BRAND 
 -----------------------------------------------------------------------------------------------*/
 .brand {height:120px;padding:0;margin:0 0 20px;
-border-radius:6px;-webkit-border-radius:6px;-moz-border-radius:6px;
 background: -webkit-linear-gradient(#51667b, #91a0b0);
 background: -moz-linear-gradient(#51667b, #91a0b0);
 background: -o-linear-gradient(#51667b, #91a0b0);
-
 box-shadow:0px 2px 5px #0c25400c2540;
 -webkit-box-shadow:0px 2px 5px #0c25400c2540;
 -moz-box-shadow: 0px 2px 5px #0c25400c2540;}
-.brand h1 {padding:15px 70px 0 15px;text-align:left;font-size:2.3em;}
+.brand h1 {font-family: Arial, Verdana, Helvetica, Sans-serif;padding:15px 70px 0 15px;text-align:left;font-size:2.3em;}
 .brand h1 a {color:#fff; text-decoration:none;}
 .brand h2 {font-size:1.1em;font-weight:400;padding:0 70px 0 15px;}
 .brand h2 a {color:#abc1d5; text-decoration:none;}
@@ -153,7 +151,7 @@ WATER (sanhoerth: 18 Jun 2011)
 #water .menuitems_hierarchy{}
 #water .menuitems_hierarchy span {}
 #water .menuitems_hierarchy ul {margin:0 ; padding:0; list-style:none;display:block;}
-#water .menuitems_hierarchy li {font-size:.8em;margin:4px 0;text-decoration:none;font-weight:700;border:1px solid #9a9a9a;background:#374a5f;padding:8px 10px;
+#water .menuitems_hierarchy li {font-size:.8em;margin:0 0 6px;text-decoration:none;font-weight:700;border:1px solid #9a9a9a;background:#374a5f;padding:8px 10px;
 border-radius:3px;-webkit-border-radius:3px;-moz-border-radius:3px;
 background: -webkit-linear-gradient(#fefefe, #efefef);
 background: -moz-linear-gradient(#fefefe, #efefef);
@@ -164,12 +162,11 @@ background: -o-linear-gradient(#fefefe, #efefef);
 #water .menuitems_hierarchy li a:hover {text-decoration:underline;color:#0c2540;}
 #water .menuitems_hierarchy ul ul {margin:0;padding:0;display:block;border:none;}
 #water .menuitems_hierarchy li li {display:block;padding:3px 3px;margin:4px 0;border:none;border-bottom:1px solid #abc1d5;}
-#water .menuitems_hierarchy li li a {color:#fff;display:block;border:none;background:none;}
+#water .menuitems_hierarchy li li a {color:inherit;display:block;border:none;background:none;}
 #water .menuitems_hierarchy li li:hover {background:#fff; }
 #water .menuitems_hierarchy li li:hover a {color:#000;}
-#water .menuitems_hierarchy ul ul ul {position:relative;left:170px;top:-21px;background:#d4dee5;}
-#water .menuitems_hierarchy li li li {background:#abc1d5;}
-#water .menuitems_hierarchy li li li a {color:#fff;}
+#water .menuitems_hierarchy li li li a {color:inherit;}
+
 #water .menuitems_hierarchy p {clear:left;}	
 #water .menuitems_hierarchy #current {background:url(images/current-bg.gif) top left repeat-x;color:#ffffff;}
 #water .categories_hierarchy,               #water .categories_hierarchy_to_iconlist,               #water .flat_items_list,               #water .root_items_list,               #water .menuitem,               #water .menuitems_hierarchy                   {margin:0 0 10px;padding:0 0 10px;border-bottom:none}
@@ -237,7 +234,7 @@ background: -o-linear-gradient(#fefefe, #efefef);
 /*-----------------------------------------------------------------------------------------------
 LOVE
 -----------------------------------------------------------------------------------------------*/
-#love {position:relative;border:1px solid #abc1d5;padding:10px;margin-top:5px;border-radius:6px;-webkit-border-radius:6px;-moz-border-radius:6px;
+#love {position:relative;border:1px solid #abc1d5;padding:10px;margin-top:0;border-radius:6px;-webkit-border-radius:6px;-moz-border-radius:6px;
 background: -webkit-linear-gradient(#f9f9f9, #d3ceda);
 background: -moz-linear-gradient(#f9f9f9, #d3ceda);
 background: -o-linear-gradient(#f9f9f9, #d3ceda);
@@ -263,7 +260,7 @@ background: -o-linear-gradient(#f9f9f9, #d3ceda);
 #love .teaser .summary p {display:inline;}
 #love .teaser ul {color:#000;font-size:1em;padding:15px 0;margin:0 0 0 30px;list-style:square;}
 #love .teaser li {margin:0 0 0 5px;padding:0 0 3px;}
-#love .category_title .title {padding:3px 0;margin:0 0 10px;display:block;border-bottom:1px soli #000000;font-size:1em;text-align:left;color:#333333;}
+#love .category_title .title {padding:3px 0;margin:0 0 10px;display:block;border:none;border-bottom:1px dotted #85be03;font-size:.8em;text-align:center;color:#85BE03;background:none;text-transform:uppercase;}
 #love .category_title .title a {color:inherit;}
 #love .staticpage-teaser {border-bottom:3px solid #abc1d5;padding:0 0 10px;margin:0 0 10px;}
 #love .staticpage-teaser ul li h2 {font-size:.9em;margin:0 0 10px;}
@@ -409,7 +406,7 @@ TEASERS
 #fire .teaser li {margin:0 0 0 5px;padding:0 0 3px;}
 #fire .teaser_list, #fire .collection_all_items_teaser_list {margin:0 0 10px;border-bottom:3px solid #abc1d5;padding:0 0 10px;}
 #fire div.collection_teaser {overflow:auto;background:#d4dee5;display:block;margin:-20px 0 20px;padding:10px;border-bottom:1px solid #374a5f;}
-#fire .staticpage-teaser {border-bottom:3px solid #abc1d5;padding:0 0 10px;margin:0 0 10px;}
+#fire .staticpage-teaser {border-bottom:1px solid #D4DEE5;padding:0 0 10px;margin:0 0 10px;}
 #fire .staticpage-teaser ul li h2 {font-size:.9em;margin:0 0 10px;}
 #fire .staticpage-teaser ul  {list-style:square;margin:0 15px;}
 #fire .list_as_forum {border-bottom:3px solid #abc1d5;margin:0 0 10px;}    
@@ -620,29 +617,7 @@ div.download_link a {color:#fff;}
 #related li a {font-size:0.8em;color:#374a5f;font-weight:400;}
 #related li a:hover {color:#000;font-weight:700;}
 #attachments img, #related img, #comments img {padding:0 0 5px;margin:0;}
-/*-----------------------------------------------------------------------------------------------
-CONTACT
------------------------------------------------------------------------------------------------*/
-#contact {}
-#contact form {text-align:left;padding:0;margin:0;}
-#contact p {margin:0;padding:0 20px 0 0;float:left;}
-#contact input {width:245px;padding:4px;margin:0 0 5px;color:#0c2540;display: block;}
-#contact .required {border:1px solid #708396;}
-#id_captcha_1 {border:1px solid #708396;} 
-#contact input.submit {color:#000;clear: both;margin:30px 0 0;}
-#contact label {margin:0;padding:5px 0 0;display:block;font-size:0.8em;font-weight:400;width:265px;}
-#contact textarea {width:530px;border:1px solid #708396; padding:5px; margin-bottom:20px;}
-#id_cc_myself {display:inline;}
-#contact .nota {border-top:1px solid #abc1d5;font-style:italic;font-size:0.7em;padding:3px 0;width:30%;color:#708396;}
-/*-----------------------------------------------------------------------------------------------
-MAP
------------------------------------------------------------------------------------------------*/
-#map {}
-#map ul {list-style:none;margin:0 0 10px 30px;padding:0;}
-#map ul li {background: transparent url(../images/css/carpeta-abierta.png) 0% 3px no-repeat;padding:0 0 10px 15px;margin:5px 0 0 15px;font-weight:700;font-size:1em;}
-#map ul li ul {margin:10px 0 0;}
-#map li li {background: transparent url(../images/css/carpeta.png) 0% 3px no-repeat;padding:0 0 10px 15px;margin:5px 0 0 15px;}
-#map ul li ul li {margin:0;padding:0 0 0 15px;font-weight:400;}
+
 /*-----------------------------------------------------------------------------------------------
 SEARCH
 -----------------------------------------------------------------------------------------------*/
@@ -662,14 +637,14 @@ SEARCH
 EARTH
 -----------------------------------------------------------------------------------------------*/
 #earth {}
-#earth {color:#708396;font-size:0.75em; text-align:center; padding:10px 0;margin:0;}  
-#earth  a {color:#0c2540; text-decoration:underline;}
-#earth  a:hover {color:#708396; text-decoration:none;}
-#earth  img {padding:10px 0 0;}
+.footer_global {color:#708396;font-size:0.85em; text-align:center; padding:10px 0;margin:0;}  
+.footer_global a {color:#0c2540; text-decoration:underline;}
+.footer_global a:hover {color:#708396; text-decoration:none;}
+.footer_global img {padding:10px 0 0;}
 #logos {text-align:center;font-size: 0.7em;padding:1px 0 20px 0;margin:10px auto;}
 #logos img {padding:7px 0 0;}
 #footer_separator { clear:both; height:0;}
-.footer_global {border-bottom:6px solid #000;margin:0;background-color:#d4dee5;border-top-right-radius:30px;-webkit-border-top-right-radius:30px;-moz-border-radius-topright:30px;  border-top-left-radius:30px;-webkit-border-top-left-radius:30px;-moz-border-radius-topleft:30px;}
+.footer_global {border-bottom:6px solid #000;margin:0;background-color:#d4dee5;}
 .expand_collapse{font-weight:bold;clear:none;margin:0px;padding:0px;color:black;float:left;margin:0 4px 0 4px;cursor: pointer;}
 /*-----------------------------------------------------------------------------------------------
 jQuery lightBox plugin - Gallery style
