--- a/cyclope/media/themes/cyorg/css/jcarousel.css
+++ b/cyclope/media/themes/cyorg/css/jcarousel.css
@@ -1,129 +1,77 @@
-/* TODO: 
- * carousel css for other regions?? #love, #water 
- * test carousel on #after_fire and #before_fire
+/*
+# Cyclope 3 GPL
+# Neutronix Workflow Design
+# Layouts: 4 & 5 Elements
+# Copyright 2010-2012 CodigoSur - SociedadCivil
+# All rights reserved.
+# This file is part of Cyclope 3.
+# Cyclope is free software: you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation, either version 3 of the License, or
+# (at your option) any later version.
+# Development: Codigo Sur www.codigosur.org
+# Less CSS based www.lesscss.org
+# 960 Grid System Based www.960.gs
+# jCarousel based http://sorgalla.com/jcarousel
+# Neutronix is developed by Santiago Hoerth Moura
 
-*/
-
-/* jcarousel for #fire region */
+/*------------------
+DEFAULTS
+-------------------*/
 
 .jcarousel-skin-cyclope .jcarousel-container {
-    -moz-border-radius: 6px;
-    -webkit-border-radius: 6px;
-   border-radius: 6px;
-    background: #eeeeee;
-    border: 2px solid #999999;
-    margin-bottom: 20px;
-}
+    background: @colora;
+    margin-bottom: 20px;}
 
-.jcarousel-skin-cyclope .jcarousel-direction-rtl {
-	direction: rtl;
-}
+/*------------------
+HORIZONTAL BUTTONS
+-------------------*/
 
-.jcarousel-skin-cyclope .jcarousel-container-horizontal {
-    width: 510px;
-    padding: 13px 18px 60px 18px;
-}
+/* ******** NEXT BUTTON ******** */
 
-/*
-.jcarousel-skin-cyclope .jcarousel-container-vertical {
-}
-*/
+.slideshow .jcarousel-skin-cyclope .jcarousel-next-horizontal {
+    top: 90px;}
 
-.jcarousel-skin-cyclope .jcarousel-clip {
-    overflow: hidden;
-    width: 510px;
-    height: 330px;
-}
+.slideshow-background .jcarousel-skin-cyclope .jcarousel-next-horizontal {
+    top: 140px;}
 
-.jcarousel-skin-cyclope .jcarousel-clip-horizontal {
-}
-
-/*
-.jcarousel-skin-cyclope .jcarousel-clip-vertical {
-}
-*/
-
-.jcarousel-skin-cyclope .jcarousel-item {
-    width: 510px;
-    height: 330px;
-    padding:0;margin:0;
-}
-
-#fire .jcarousel-skin-cyclope .jcarousel-item-horizontal {
-	margin-left: 0;
-    margin: 0;
-    margin-right: 20px;
-}
-/*
-#fire .jcarousel-skin-cyclope .jcarousel-direction-rtl .jcarousel-item-horizontal {
-    margin: 0;
-	margin-left: 20px;
-    margin-right: 0;
-}
-*/
-
-/*
-.jcarousel-skin-cyclope .jcarousel-item-vertical {
-    margin-bottom: 10px;
-}
-*/
-
-.jcarousel-skin-cyclope .jcarousel-item-placeholder {
-    background: #fff;
-    color: #000;
-}
-
-/**
- *  Horizontal Buttons
- */
 .jcarousel-skin-cyclope .jcarousel-next-horizontal {
-    position: absolute;
-    top: 360px;
-    right: 16px;
-    width: 32px;
-    height: 32px;
-    cursor: pointer;
-    background: transparent url(../images/jcarousel/next-horizontal.png) no-repeat 0 0;
-}
-
-.jcarousel-skin-cyclope .jcarousel-direction-rtl .jcarousel-next-horizontal {
-    left: 5px;
-    right: auto;
-    background-image: url(../images/jcarousel/prev-horizontal.png);
-}
+  position: absolute;
+  right: 0px;
+  width: 32px;
+  height: 32px;
+  cursor: pointer;
+  background: transparent url(../images/jcarousel/next-horizontal-right.png) no-repeat 0 0;}
 
 .jcarousel-skin-cyclope .jcarousel-next-horizontal:hover,
 .jcarousel-skin-cyclope .jcarousel-next-horizontal:focus {
-    background-position: -32px 0;
-}
+  background-position: -32px 0;}
 
 .jcarousel-skin-cyclope .jcarousel-next-horizontal:active {
-    background-position: -64px 0;
-}
+  background-position: -65px 0;}
 
 .jcarousel-skin-cyclope .jcarousel-next-disabled-horizontal,
 .jcarousel-skin-cyclope .jcarousel-next-disabled-horizontal:hover,
 .jcarousel-skin-cyclope .jcarousel-next-disabled-horizontal:focus,
 .jcarousel-skin-cyclope .jcarousel-next-disabled-horizontal:active {
-    cursor: default;
-    background-position: -96px 0;
-}
+  cursor: default;
+  background-position: -96px 0;}
+
+/* ******** PREV BUTTON ******** */
+
+.slideshow .jcarousel-skin-cyclope .jcarousel-prev-horizontal {
+    top: 90px;}
+
+.slideshow-background .jcarousel-skin-cyclope .jcarousel-prev-horizontal {
+    top: 140px;}
 
 .jcarousel-skin-cyclope .jcarousel-prev-horizontal {
-    position: absolute;
-    top: 360px;
-    left: 16px;
-    width: 32px;
-    height: 32px;
-    cursor: pointer;
-    background: transparent url(../images/jcarousel/prev-horizontal.png) no-repeat 0 0;
-}
-
-.jcarousel-skin-cyclope .jcarousel-direction-rtl .jcarousel-prev-horizontal {
-    left: auto;
-    right: 5px;
-    background-image: url(../images/jcarousel/next-horizontal.png);
-}
+  position: absolute;
+  left: 0px;
+  width: 32px;
+  height: 32px;
+  cursor: pointer;
+  background: transparent url(../images/jcarousel/prev-horizontal-left.png) no-repeat 0 0;}
 
 .jcarousel-skin-cyclope .jcarousel-prev-horizontal:hover, 
 .jcarousel-skin-cyclope .jcarousel-prev-horizontal:focus {
@@ -131,133 +79,179 @@
 }
 
 .jcarousel-skin-cyclope .jcarousel-prev-horizontal:active {
-    background-position: -64px 0;
-}
+  background-position: -64px 0;}
 
 .jcarousel-skin-cyclope .jcarousel-prev-disabled-horizontal,
 .jcarousel-skin-cyclope .jcarousel-prev-disabled-horizontal:hover,
 .jcarousel-skin-cyclope .jcarousel-prev-disabled-horizontal:focus,
 .jcarousel-skin-cyclope .jcarousel-prev-disabled-horizontal:active {
-    cursor: default;
-    background-position: -96px 0;
-}
-
-/**
- *  Vertical Buttons
- */
-
-/* not implemented in cyclope */
-
-/*
-.jcarousel-skin-cyclope .jcarousel-next-vertical {
-    position: absolute;
-    bottom: 5px;
-    left: 43px;
-    width: 32px;
-    height: 32px;
-    cursor: pointer;
-    background: transparent url(../images/jcarousel/next-vertical.png) no-repeat 0 0;
-}
-
-.jcarousel-skin-cyclope .jcarousel-next-vertical:hover,
-.jcarousel-skin-cyclope .jcarousel-next-vertical:focus {
-    background-position: 0 -32px;
-}
-
-.jcarousel-skin-cyclope .jcarousel-next-vertical:active {
-    background-position: 0 -64px;
-}
-
-.jcarousel-skin-cyclope .jcarousel-next-disabled-vertical,
-.jcarousel-skin-cyclope .jcarousel-next-disabled-vertical:hover,
-.jcarousel-skin-cyclope .jcarousel-next-disabled-vertical:focus,
-.jcarousel-skin-cyclope .jcarousel-next-disabled-vertical:active {
-    cursor: default;
-    background-position: 0 -96px;
-}
-
-.jcarousel-skin-cyclope .jcarousel-prev-vertical {
-    position: absolute;
-    top: 5px;
-    left: 43px;
-    width: 32px;
-    height: 32px;
-    cursor: pointer;
-    background: transparent url(../images/jcarousel/prev-vertical.png) no-repeat 0 0;
-}
-
-.jcarousel-skin-cyclope .jcarousel-prev-vertical:hover,
-.jcarousel-skin-cyclope .jcarousel-prev-vertical:focus {
-    background-position: 0 -32px;
-}
-
-.jcarousel-skin-cyclope .jcarousel-prev-vertical:active {
-    background-position: 0 -64px;
-}
-
-.jcarousel-skin-cyclope .jcarousel-prev-disabled-vertical,
-.jcarousel-skin-cyclope .jcarousel-prev-disabled-vertical:hover,
-.jcarousel-skin-cyclope .jcarousel-prev-disabled-vertical:focus,
-.jcarousel-skin-cyclope .jcarousel-prev-disabled-vertical:active {
-    cursor: default;
-    background-position: 0 -96px;
-}
-*/
+  cursor: default;
+  background-position: -96px 0;}
 
 
-/* internal .slideshow.teaser item styles */
+/*------------------
+MODE STANDAR VIEW
+-------------------*/
 
-#fire .slideshow.teaser {
-  margin: 10px 0;
+.slideshow .jcarousel-skin-cyclope .jcarousel-container-horizontal {
+    width: 530px;
+    padding: 10px;
+    .rounded-corners(10px);}
+    
+.slideshow .jcarousel-skin-cyclope .jcarousel-clip {
+    overflow: hidden;
+    width: 530px;
+    height: 210px;}
+
+.slideshow .jcarousel-skin-cyclope .jcarousel-item {
+    height: 210px;}
+
+#spark .slideshow {
+  margin: 0;
   border-bottom: none;
-    padding: 0;
-}
+  padding: 0;}
 
-#fire .slideshow.teaser img.icon {
-    border: 3px solid #CCCCCC;
-    clear: both;
-    float: left;
-    margin: 0 20px 0 0;
-    padding: 3px;
-    width: 300px;
-}
+#spark .slideshow img.slideshow_picture {
+  border: 3px solid @colorb;
+  float: left;
+  margin: 0 10px 0 0;
+  padding:0;
+  width: 140px;
+  .rounded-corners(6px);
+  background:@colora;}
 
-#fire .slideshow.teaser img.icon.big {
-    border: none;
-    clear: both;
-    float: left;
-    margin: 0;
-    padding: 0;
-    width: 510px;
-}
+#spark .slideshow img.type_icon {
+  display:none;
+  float: right;
+  right: 10px; 
+  margin: 0;
+  padding: 0 10px 0 0;
+  position: absolute;
+  top: 10px;
+  width:20px;}
+  
+#spark .slideshow .teaser_icon_container {
+  position: relative;}
 
-#fire .slideshow.teaser img.type_icon {
-    float: left;
-    left: 10px;
-    margin: 0;
-    padding: 0 10px 0 0;
-    position: absolute;
-    top: 10px;
-}
+#spark .slideshow .title {
+  border: medium none;
+  font-size: 1.7em !important;
+  line-height: 1.1em;
+  margin: 0;}
 
-#fire .slideshow.teaser .teaser_icon_container {
- position: relative;
-}
+#spark .slideshow .summary {
+  color: @color-omega !important;
+  font-size: .95em !important;
+  font-weight: 400;
+  line-height: 1.2em;
+  padding: 0 20px 0 0 !important;
+  margin:0 !important;
+  text-align: left !important;
+  z-index:4;}
 
-#fire .teaser .title {
-    border: medium none;
-    font-size: 1.2em;
-    line-height: 1.1em;
-    margin: 0;
-}
+#spark .slideshow .summary p { 
+  padding: 0 !important;
+  margin:0 !important;
+  display:block !important;}
 
-#fire .slideshow.teaser .summary {
-    color: #333333;
-    font-size: 0.8em;
-    font-weight: 400;
-    line-height: 1.3em;
-    padding: 0 0 15px 0;
-    text-align: left;
-}
+/*------------------
+MODE IMAGE BACKGROUND VIEW
+-------------------*/
 
+.slideshow-background .jcarousel-skin-cyclope .jcarousel-container-horizontal {
+    width: 550px;
+    padding: 0;}
+
+
+.slideshow-background .jcarousel-skin-cyclope .jcarousel-clip {
+    overflow: hidden;
+    width: 550px;
+    height: 330px;}
+
+.slideshow-background .jcarousel-skin-cyclope .jcarousel-item {
+    width: 550px;
+    padding:0;
+    margin:0;
+    height: 330px;}
+
+#spark .slideshow-background {
+  
+  margin: 0;
+  border-bottom: none;
+  padding: 0;
+  z-index:0;}
+
+#spark .slideshow-background img.icon {
+  border: none;
+  clear: both;
+  float: left;
+  margin: 0 0 0;
+  padding: 0;
+  position:absolute;
+  z-index:1;}
+
+#spark .slideshow-background img.icon.big {
+  border: none;
+  clear: both;
+  float: left;
+  margin: 0;
+  padding: 0;
+  width: 550px;}
+
+#spark .slideshow-background img.type_icon {
+  float: left;
+  left: 10px;
+  margin: 0;
+  padding: 0 10px 0 0;
+  position: absolute;
+  top: 10px;}
+
+#spark .slideshow-background .teaser_icon_container {
+  position: relative;}
+
+#spark .slideshow-background .title {
+  border: none;
+  font-size: 1.2em;
+  line-height: 100%;
+  padding:15px;
+  margin: 0;
+  z-index:3;
+  position:absolute; 
+  width:520px;
+  color:@color-alpha;
+  background:url(../images/jcarousel/opacity.png);
+  display:block;
+  float:left;}
+  
+#spark .slideshow-background .title a {
+  color:@color-alpha;}
+  
+#spark .slideshow-background .download_link {
+    display:block;
+    clear:both;
+    padding:0;
+    margin:0;
+    float:left;}
+
+#spark .slideshow-background .summary {
+  color: @color-alpha !important;
+  font-size: 0.8em !important;
+  font-weight: 400;
+  line-height: 1.3em;
+  padding: 15px !important;
+  margin:0;
+  text-align: left;
+  background:url(../images/jcarousel/opacity.png);
+  position:absolute;
+  bottom:0;
+  z-index:4;}
+
+#spark .slideshow-background .summary p { 
+  overflow:auto;
+  width:520px;
+  display:block !important;}
+  
+#spark .slideshow-background li { 
+  padding:0 !important;
+  margin:0 !important;}  
 
