--- a/cyclope/templates/cyclope/themes/cyorg/five_elements.html
+++ b/cyclope/templates/cyclope/themes/cyorg/five_elements.html
@@ -1,22 +1,13 @@
 {% extends CYCLOPE_THEME_BASE_TEMPLATE %}
-
 {% load layout %}
-
-{% block body_class %}5_elements{% endblock %}
+{% block body_class %}five_elements{% endblock %}
 
 {% block page_content %}
-<div class="grid_13">
-<div id="fire">
-    {% region 'before_fire' %}
-    {% block content %}{% endblock %}
-    {% region 'after_fire' %}
+<div class="grid_5" >{% region 'water' %}</div>
+<div class="grid_14">
+    {% region 'spark' %}
+    <div id="fire">{% block content %}{% endblock %}</div>
+    {% region 'ash' %}
 </div>
-</div>
-
-<div class="grid_6">
-  <div class="content">
-    {% region 'love'%}
-  </div>
-</div>
-
+<div class="grid_5">{% region 'love'%}</div>
 {% endblock %}
