--- a/cyclope/templates/cyclope/themes/cyorg/four_elements.html
+++ b/cyclope/templates/cyclope/themes/cyorg/four_elements.html
@@ -1,18 +1,14 @@
 {% extends CYCLOPE_THEME_BASE_TEMPLATE %}
 
 {% load layout%}
-
-{% block body_class %}4_elements{% endblock %}
+{% block title %}{%if title %}{{title}} | {%endif%}{{ CYCLOPE_SITE_SETTINGS.global_title }}{%endblock%}
+{% block body_class %}four_elements{% endblock %}
 
 {% block page_content %}
+<div class="grid_5" >{% region 'water' %}</div>
 <div class="grid_19">
-<div id="fire">
-  {% region 'before_fire' %}
-  <div class="content_fire">
-  {% block content %} {% endblock %}
-  </div>
-  {% region 'after_fire' %}
+  {% region 'spark' %}
+  <div id="fire">{% block content %} {% endblock %}</div>
+  {% region 'ash' %}
 </div>
-</div>
-
 {% endblock %}
