Fixed Diversia Theme

--- a/cyclope/media/themes/diversia/css/fire.less
+++ b/cyclope/media/themes/diversia/css/fire.less
@@ -895,7 +895,7 @@ TEXTILE FORMAT
   background:url(../images/css/bordersB.png) no-repeat top right;
   height:100px;}
 
-#slideshow_category_spark {  
+#spark .slideshow {  
   margin:0 auto;
   background:#facd34;
   padding:0 20px 0 0;
