--- a/cyclope/media/themes/diversia/css/love.less
+++ b/cyclope/media/themes/diversia/css/love.less
@@ -22,11 +22,12 @@ LOVE
 -----------------------------------------------------------------------------------------------*/
 #love {
   padding:0 0 10px;
-  margin-top:60px;
+  margin:60px 0;
   .rounded-corners(6px);
   background:#f7f7f7;}
+
 .five_elements #love {
-  margin:450px 0 0;}
+  margin-top:450px;}
 
 #love .content-view {
   }
