Refactored comments on its own app and added email notifications to comments.

--- a/cyclope/templates/comments/form.html
+++ b/cyclope/templates/comments/form.html
@@ -24,6 +24,7 @@
       {% else %}
           {{ field.label_tag }}
           {{ field }}
+          <span class="helptext">{{ field.help_text }}</span>
        {% endif %}
     {% endif %}
   {% endfor %}
