Removed tagging, it was never fully operational

--- a/cyclope/apps/feeds/templates/feeds/feed_teaser.html
+++ b/cyclope/apps/feeds/templates/feeds/feed_teaser.html
@@ -1,4 +1,4 @@
-{% load i18n tagging_tags fb_versions dbgettext_tags cyclope_utils %}
+{% load i18n fb_versions dbgettext_tags cyclope_utils %}
 
   <div class="content-view feed teaser feed-teaser">
 
