--- a/cyclope/apps/staticpages/templates/staticpages/staticpage_teaser.html
+++ b/cyclope/apps/staticpages/templates/staticpages/staticpage_teaser.html
@@ -1,4 +1,4 @@
-{% load i18n tagging_tags fb_versions cyclope_utils %}
+{% load i18n fb_versions cyclope_utils %}
 
   <div class="content-view staticpage teaser staticpage-teaser">
 
