--- a/cyclope/templates/cyclope/themes/neutronix/base.html
+++ b/cyclope/templates/cyclope/themes/neutronix/base.html
@@ -16,7 +16,7 @@
 # Neutronix is developed by Santiago Hoerth Moura
  -->
 
-{% load layout i18n tagging_tags cyclope_utils %}
+{% load layout i18n cyclope_utils %}
 
 <html>
 
