--- a/cyclope/apps/forum/templates/forum/topic_teaser.html
+++ b/cyclope/apps/forum/templates/forum/topic_teaser.html
@@ -1,4 +1,4 @@
-{% load i18n tagging_tags fb_versions markup comments %}
+{% load i18n fb_versions markup comments %}
 
   <div class="content-view topic teaser topic-teaser">
 
