--- a/cyclope/apps/medialibrary/templates/medialibrary/movieclip_teaser.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/movieclip_teaser.html
@@ -1,4 +1,4 @@
-{% load i18n tagging_tags fb_versions cyclope_utils %}
+{% load i18n fb_versions cyclope_utils %}
 
   <div class="content-view movieclip teaser movieclip-teaser">
 
@@ -13,17 +13,6 @@
      {% endif %}
 
      {% include "cyclope/author_block.html" with author=movieclip.author %}
-
-     {% if movieclip.tags %}
-         <div class="meta-content"><span class="tags">
-           <span class="tags-label">{% trans "Tags" %}:</span>
-           {% tags_for_object movieclip as movieclip_tags %}
-           {% for tag in movieclip_tags %}
-             <!--<a href="/tag/{{ tag.name|slugify }}" class="tag">{{tag.name}}</a>-->
-             {{tag.name}}{% if not forloop.last%},{% endif%}
-           {% endfor %}
-         </span></div>
-     {% endif %}
 
     <div class="clear"></div>
   </div>
