--- a/cyclope/core/collections/templates/collections/collection_root_categories_teaser_list.html
+++ b/cyclope/core/collections/templates/collections/collection_root_categories_teaser_list.html
@@ -1,6 +1,6 @@
 {% extends host_template %}
 
-{% load i18n cyclope_utils tagging_tags fb_versions %}
+{% load i18n cyclope_utils fb_versions %}
 
 {% block content %}
   <div>
