Upgraded here and there to the latest django standards.

--- a/cyclope/templates/admin/change_form.html
+++ b/cyclope/templates/admin/change_form.html
@@ -14,7 +14,7 @@
 
 {% block extrastyle %}
 {{ block.super }}
-<link rel="stylesheet" type="text/css" href="{% admin_media_prefix %}css/forms.css" />
+<link rel="stylesheet" type="text/css" href="{% static "admin/css/forms.css" %}" />
 {% if frontend_admin %}
 <link href="{{ CYCLOPE_STATIC_URL }}css/frontend_edit.css" rel="stylesheet" type="text/css"/>
 <link href="{{ CYCLOPE_THEME_MEDIA_URL }}css/frontend_edit.less" rel="stylesheet/less" type="text/css"/>
