Fixed #155 pagination on search not working (backport)

--- a/cyclope/templates/cyclope/pagination_block.html
+++ b/cyclope/templates/cyclope/pagination_block.html
@@ -1,12 +1,12 @@
-{% load i18n %}
+{% load i18n cyclope_utils %}
 
    {% if page.paginator.num_pages != 1 %}
     <div class="paginator">
         <span class="step-links">
             {% if page.has_previous %}
                 {# query is present when this block is included in the search view #}
-                <a href="?{% if query %}q={{ query }}&amp;{% endif %}page=1">{% trans 'first' %}</a>&nbsp
-                <a href="?{% if query %}q={{ query }}&amp;{% endif %}page={{ page.previous_page_number }}">{% trans 'previous' %}</a>
+                <a href="?{% append_to_get page=1 %}">{% trans 'first' %}</a>&nbsp
+                <a href="?{% append_to_get page=page.previous_page_number %}">{% trans 'previous' %}</a>
             {% endif %}
 
             <span class="current">
@@ -14,8 +14,8 @@
             </span>
 
             {% if page.has_next %}
-                <a href="?{% if query %}q={{ query }}&amp;{% endif %}page={{ page.next_page_number }}">{% trans 'next' %}</a>&nbsp
-                <a href="?{% if query %}q={{ query }}&amp;{% endif %}page={{ page.paginator.num_pages }}">{% trans 'last' %}</a>
+                <a href="?{% append_to_get page=page.next_page_number %}">{% trans 'next' %}</a>&nbsp
+                <a href="?{% append_to_get page=page.paginator.num_pages %}">{% trans 'last' %}</a>
             {% endif %}
         </span>
     </div>
