--- a/cyclope/templates/cyclope/related_contents_block.html
+++ b/cyclope/templates/cyclope/related_contents_block.html
@@ -1,4 +1,6 @@
 {% load i18n cyclope_utils %}
+
+{% with content_relations=current_object.related_contents.all  %}
   {% if content_relations %}
   {% regroup content_relations by other_type as relations %}
   <div class="related_contents">
@@ -19,3 +21,4 @@
     </ul>
   </div>
   {% endif %}
+{% endwith %}
