Minnor i18n fix on related_contents_block

--- a/cyclope/templates/cyclope/related_contents_block.html
+++ b/cyclope/templates/cyclope/related_contents_block.html
@@ -4,7 +4,7 @@
   {% if content_relations %}
   {% regroup content_relations by other_type as relations %}
   <div class="related_contents">
-    <span>Relacionado: </span>
+    <span>{% trans "Related:" %} </span>
     <ul>
     {% for relation in relations %}
       <li class='related_type {{ relation.grouper }}'>
