Improved user profiles, added options for author selection (user or author)

--- a/cyclope/templates/cyclope/authored_content_block.html
+++ b/cyclope/templates/cyclope/authored_content_block.html
@@ -14,7 +14,7 @@
        {% alias content as content.get_object_name %}
        {% alias content as 'media' %}
       {% assign template_path content|inline_template:inline_view_name %}
-      {% include template_path with current_object=content %}
+      {% include template_path with current_object=content host_template="cyclope/inline_view.html"%}
     {% endfor %}
     </div>
   {% endif %}
