--- a/cyclope/templates/cyclope/author_block.html
+++ b/cyclope/templates/cyclope/author_block.html
@@ -1,9 +1,12 @@
 {% load i18n cyclope_utils %}
 
-{% assign author current_object.author|default:current_object.user %}
+{% with author=current_object.get_author_or_user %}
+{% with author_url=author.get_absolute_url %}
 {% if author %}
 <div class="author-container meta-content">
-  <h4  class="author"><a href='{{ author.get_absolute_url }}'>{% trans "By" %} {{ author }}</a></h4>
+  <h4  class="author">{% if author_url %}<a href='{{ author_url }}'>{% endif %}{% trans "By" %} {{ author }}{% if author_url %}</a>{% endif %}</h4>
 </div>
 {% endif %}
+{% endwith %}
+{% endwith %}
 
