--- a/cyclope/core/user_profiles/templates/profiles/edit_profile.html
+++ b/cyclope/core/user_profiles/templates/profiles/edit_profile.html
@@ -1,5 +1,5 @@
 {% extends CYCLOPE_DEFAULT_TEMPLATE %}
-{% load i18n fb_versions %}
+{% load i18n fb_versions crispy_forms_tags %}
 
 {% block content%}
 
@@ -7,23 +7,12 @@
 <h6>
   {% trans "Please fill in your user profile data" %}
 </h6>
-<form enctype="multipart/form-data" method="post">{% csrf_token %}
-{% for field in  form %}
-  <div>
-  {{ field.label_tag }}
-  {% if field.help_text %}<span class="help">{{ field.help_text }}</span> <br/> {% endif%}
-  {{ field.errors }}
-  {% if field.name ==  "avatar" and profile.avatar %}
-    <img src="{% version profile.avatar.path 'croppedthumbnail' %}" alt="profile avatar" />
-  {% endif %}
 
-  {{ field }}
-  </div>
-{% endfor %}
-<p class="submit">
-  <input type="submit" name="post" class="submit" value="{% trans "Send data" %}" />
-</p>
-</form>
+{% crispy form form.helper %}
+
+{% if profile.avatar %}
+  <img src="{% version profile.avatar.path 'croppedthumbnail' %}" alt="profile avatar" />
+{% endif %}
 </div>
 
 {% endblock %}
