--- a/cyclope/templates/cyclope/themes/neutronix/base.html
+++ b/cyclope/templates/cyclope/themes/neutronix/base.html
@@ -31,11 +31,14 @@
     <link href="{{ CYCLOPE_THEME_MEDIA_URL }}css/cyclope.less" rel="stylesheet/less" type="text/css"/>
     <link href="{{ CYCLOPE_THEME_MEDIA_URL }}css/print.css" rel="stylesheet" type="text/css" media="print"/>
     <link href="{{ CYCLOPE_STATIC_URL }}js/lightbox/css/jquery.lightbox-0.5.css" rel="stylesheet" type="text/css" media="screen"/>
-    {%endblock%}
+    <link rel="stylesheet" href="{{ CYCLOPE_STATIC_URL }}css/uni-form.css" type="text/css" />
+    <link rel="stylesheet" href="{{ CYCLOPE_STATIC_URL }}css/default.uni-form.css" type="text/css" />
+    {% endblock %}
     <script type="text/javascript" src="{{ CYCLOPE_STATIC_URL }}js/less.min.js"></script>
     <script type="text/javascript" src="{{ CYCLOPE_STATIC_URL }}js/jquery.min.js"></script>
     <script type="text/javascript" src="{{ CYCLOPE_STATIC_URL }}js/menuitems.js"></script>
     <script type="text/javascript" src="{{ CYCLOPE_STATIC_URL }}js/lightbox/js/jquery.lightbox-0.5.pack.js"></script>
+    <script type="text/javascript" src="{{ CYCLOPE_STATIC_URL }}js/uni-form.jquery.min.js" ></script>
     <script type="text/javascript">
     $(function() {
         $('#gallery a').lightBox({
@@ -53,6 +56,11 @@
             txtOf:                  '{% trans "of"%}'
         });
     });
+    </script>
+    <script type="text/javascript">
+     $(function(){
+       $('form.uniForm').uniform();
+     });
     </script>
     {% block extra_head %}{% endblock %}
 </head>
