--- a/cyclope/templates/contact_form/contact_form.html
+++ b/cyclope/templates/contact_form/contact_form.html
@@ -1,12 +1,9 @@
 {% extends CYCLOPE_DEFAULT_TEMPLATE %}
-{% load i18n cyclope_utils %}
+{% load i18n cyclope_utils crispy_forms_tags %}
 
 {% block content%}
 <div id="contact" class="user_input">
 {{ instructions|smart_style }}
-<form action="{% url contact_form %}" method="post">{% csrf_token %}
-  {{ form.as_p }}
-  <input type="submit" class="submit" value="{% trans "Send" %}" />
-</form>
+{% crispy form %}
 </div>
 {% endblock %}
