--- a/cyclope/templates/registration/registration_form.html
+++ b/cyclope/templates/registration/registration_form.html
@@ -1,12 +1,10 @@
 {% extends CYCLOPE_DEFAULT_TEMPLATE %}
-{% load i18n %}
+{% load i18n crispy_forms_tags %}
 
 {% block content%}
 <div class="frontend_login">
-<h4 class="title">{% trans "Please fill in your user profile data" %}</h4>
-<form action="" method="post">{% csrf_token %}
-{{ form }}
-<p class="submit"><input type="submit" name="post" class="submit" value="{% trans "Register" %}"/></p>
-</form>
+<h1 class="title">{% trans "Registration" %}</h1>
+<h6>{% trans "Please fill in your user profile data" %}</h6>
+{% crispy form %}
 </div>
 {% endblock %}
