--- a/cyclope/media/themes/neutronix/css/fire.less
+++ b/cyclope/media/themes/neutronix/css/fire.less
@@ -401,7 +401,8 @@ TEASERS
   border-bottom:3px solid @colorb;
   padding:0 0 10px;}
 
-#fire div.collection_teaser {
+#fire div.collection_teaser,
+.form_summary {
   overflow:auto;
   background:@colora;
   display:block;
@@ -690,24 +691,6 @@ CONTACTS
 /*-----------------
 FORMS
 -------------------*/
-#fire form small {
-  font-size:0.7em;
-  padding:5px 0;
-  display:block;}
-
-#fire form input {
-  padding:2px;
-  width:130px;
-  .rounded-corners(3px);
-  background:@color-alpha;
-  color:@color-omega;
-  border:1px solid @color-omega;}
-
-#fire form input.submit {
-  width:30px;
-  background:@colord;
-  color:@color-alpha;
-  border:1px solid @color-omega;}
 
 /*-----------------
 SEARCH BOX
