--- a/cyclope/templates/registration/password_change_form.html
+++ b/cyclope/templates/registration/password_change_form.html
@@ -1,15 +1,15 @@
 {% extends CYCLOPE_DEFAULT_TEMPLATE %}
-{% load i18n %}
+{% load i18n crispy_forms_tags %}
 
 {% block content %}
 
-<div class="user_input">
-<form enctype="multipart/form-data" method="post">{% csrf_token %}
-  {{ form.as_p }}
-  <p class="submit">
-    <input type="submit" name="post" class="submit" value="{% trans "Send data" %}" />
-  </p>
+<h1 class="title">{% trans "Change password" %}</h1>
+
+<form enctype="multipart/form-data" method="post" class="uniForm change_password">{% csrf_token %}
+  {{form|crispy}}
+  <div class="buttonHolder">
+    <input type="submit" name="post" class="submit" value="{% trans "Change" %}" />
+  </div>
 </form>
-</div>
 
 {% endblock %}
