Added crispy to polls, abuse and search.

--- a/cyclope/templates/search/search.html
+++ b/cyclope/templates/search/search.html
@@ -1,15 +1,18 @@
 {% extends CYCLOPE_DEFAULT_TEMPLATE %}
-{% load i18n cyclope_utils%}
+{% load i18n cyclope_utils crispy_forms_tags %}
 
 {% block content %}
-<div id='advanced_search' class='user_input'>
+<div id='advanced_search'>
     <h2 class="title">{% trans "Advanced search" %}</h2>
 
-    <form method="get" action=".">
-        {{ form }}
-        <input type="submit" class="submit" value={% trans "Search" %}>
+    <form method="get" action="." class="uniForm">
+        {{ form|crispy }}
+        <div class="buttonHolder">
+          <input type="submit" value={% trans "Search" %}>
+        </div>
     </form>
 </div>
+
 {% if query %}
     <div id="search_results" >
         <h3>{% trans "Results" %}</h3>
