--- a/cyclope/apps/polls/templates/polls/poll_submission.html
+++ b/cyclope/apps/polls/templates/polls/poll_submission.html
@@ -1,6 +1,6 @@
 {% extends host_template %}
 
-{% load comments i18n fb_versions cyclope_utils markup %}
+{% load comments i18n fb_versions cyclope_utils markup crispy_forms_tags %}
 
 {% block content %}
 
@@ -8,23 +8,19 @@
 
 <div class="content-view poll submission poll-submission">
 
-  {% get_comment_count for poll as comment_count %}
-
   <div class="meta-content">{% include 'collections/categories_navigation_block.html' %}</div>
 
   <h1 class="title">{{ poll.name }}</h1>
 
-  <form action="" method="POST"> <!-- class="user_input"> -->
-    {% for form in forms %}
+  <form action="{% url poll-submission poll.slug %}" method="POST" class="uniForm">
     {% csrf_token %}
-      <p>{{ form.question }}</p>
-        {% for field in form.form %}
-        {{ field.errors }}
-          {{ field }}
-        {% endfor %}
+    {% for form in forms %}
+        {{ form|crispy }}
     {% endfor %}
-    {{ captcha_form.as_p }}
-      <input type="submit" class="submit" value="{% trans "Send" %}" />
+    {{ captcha_form|crispy }}
+    <div class="buttonHolder">
+      <input type="submit" value="{% trans "Submit" %}" />
+    </div>
   </form>
 
 </div>
