Improved CSS CrispyForm

--- a/cyclope/media/themes/neutronix/css/style.less
+++ b/cyclope/media/themes/neutronix/css/style.less
@@ -625,50 +625,16 @@ margin:0 0 20px;}
   padding:4px;
   width:350px;}
 
-.frontend_login p {
-  padding:5px 0;
+#div_id_captcha img {
+  float:left;
   display:block;}
 
-.frontend_login label {
-  width:200px;
-  display:block;
-  float:left;
-  margin:0 0 10px;}
+#div_id_captcha input {
+  width:60px;
+  margin:6px 0 0 10px;}
 
-.frontend_login input {
-  display:block;
-  margin:0 0 10px;}
-
-.frontend_login input.submit {
-  width:170px !important;
-  margin:30px 0;}
-
-.frontend_login span.register {
-  display:block;
-  background:@colora;
-  padding:10px 15px !important;
-  margin:20px 0 !important;
-  .rounded-corners(12px);}
-
-.frontend_login span.register a {
-  text-decoration:underline;}
-
-.frontend_login ul.errorlist {
-  list-style:none;
-  background:@colorc;
-  color:@color-alpha;
-  margin:20px 0 !important;
-  padding:10px !important;
-  font-size:.8em !important;
-  font-weight:700;
-  display:block;
-  clear:both;
-  .rounded-corners(10px);}
-
-.frontend_login ul.errorlist li {
-  list-style:none;
-  color:@color-alpha;}
-
+.login_form .uniForm .buttonHolder {
+  text-align:left !important;}
 
 
 p span.caps {
