--- a/cyclope/templates/registration/login.html
+++ b/cyclope/templates/registration/login.html
@@ -2,7 +2,7 @@
 {% load i18n crispy_forms_tags %}
 
 {% block content %}
-<div >
+<div class="login_form">
     <h1 class="title">{% trans "login"|capfirst %}</h1>
 
     <div class="form_summary">
