Dynamic forms and comments forms moved to crispy...hopefully the last ones!

--- a/cyclope/templates/comments/comments_block.html
+++ b/cyclope/templates/comments/comments_block.html
@@ -45,8 +45,8 @@
         <a name="comments" href="#comments" id="show_comment_form">{% trans "comment on this content" %}</a>
       </div>
 
-      <div class="box">
-        <div class="user_input" id="wrap_write_comment">
+      <div>
+        <div id="wrap_write_comment">
         <!--form comentario -->
          <div id="form-comment">{% render_comment_form for current_object %}</div>
         </div>
