--- a/cyclope/apps/dynamicforms/templates/forms/includes/built_form.html
+++ b/cyclope/apps/dynamicforms/templates/forms/includes/built_form.html
@@ -1,22 +1,14 @@
-{% load i18n cyclope_utils %}
-    <h1>{{ form.title }}</h1>
+{% load i18n cyclope_utils crispy_forms_tags %}
+    <h1 class="title">{{ form.title }}</h1>
     {% if form.intro %}
-    <p>{{ form.intro|smart_style }}</p>
+    <div class="form_summary">
+        <div class="summary">{{ form.intro|smart_style }}</div>
+    </div>
     {% endif %}
-    <form action="{{ form.get_absolute_url }}" method="post"
-        {% if form_for_form.is_multipart %}enctype="multipart/form-data"{% endif %}>
-        {% csrf_token %}
-        {% for field in form_for_form %}
-            <div class="form-field">
-                {% if field.errors %}
-                <span class="errorlist">
-                {% for error in field.errors %}{{ error|escape }}{% endfor %}
-                </span>
-                {% endif %}
-                <div class="form-field-label"> {{ field.label_tag }}</div>
-                {{ field }}
-            </div>
-        {% endfor %}
-        <div style="clear:left;">&nbsp;</div>
-        <input type="submit" value="{{ form.button_text }}">
+    <form class="uniForm" action="{{ form.get_absolute_url }}" method="post"
+        {% if form_for_form.is_multipart %}enctype="multipart/form-data"{% endif %}>{% csrf_token %}
+        {{ form_for_form|crispy }}
+        <div class="buttonHolder">
+          <input type="submit" value="{{ form.button_text }}">
+        </div>
     </form>
