Fixed minnor error on less files that prevented compilation

--- a/cyclope/media/themes/frecuency/css/cyclope.less
+++ b/cyclope/media/themes/frecuency/css/cyclope.less
@@ -558,7 +558,7 @@ COMMENTS
 #user_comments form {padding:0 0 30px 0;margin:0 0 0 0;}				
 #user_comments fieldset {display: block;	margin: 0 0 0 0;padding:5px 0;border:none;} 
 #user_comments select {display: block;}
-#user_comments small {margin:0;color:#646a1c;font-weight:400;display:block padding:3px 0;width:350px;clear:both;font-size:0.8em;}
+#user_comments small {margin:0;color:#646a1c;font-weight:400;display:block;padding:3px 0;width:350px;clear:both;font-size:0.8em;}
 #user_comments .hidden {border:none;display:none;}
 /*-----------------------------------------------------------------------------------------------
 VISTA LISTA DETALLADA ARTICULOS 
