--- a/cyclope/templates/cyclope/themes/supplementary/base.html
+++ b/cyclope/templates/cyclope/themes/supplementary/base.html
@@ -1,1 +1,5 @@
 {% extends "cyclope/themes/neutronix/base.html" %}
+
+{% block neutronixcss %}
+    <link href="{{ CYCLOPE_THEME_MEDIA_URL }}css/style.css" rel="stylesheet" type="text/css"/>
+{% endblock %}
