--- a/cyclope/core/user_profiles/templates/profiles/edit_profile.html
+++ b/cyclope/core/user_profiles/templates/profiles/edit_profile.html
@@ -13,7 +13,7 @@
     </div>
 </div>
 
-{% crispy form form.helper %}
+{% crispy form %}
 
 {% if profile.avatar %}
   <img src="{% version profile.avatar.path 'croppedthumbnail' %}" alt="profile avatar" />
