Added optional Like/Dislike rating to medialibrary and article content.

--- a/cyclope/apps/articles/templates/articles/article_detail.html
+++ b/cyclope/apps/articles/templates/articles/article_detail.html
@@ -66,6 +66,8 @@
 
 {% include 'cyclope/related_contents_block.html' %}
 
+{% include 'ratings/rating_block.html' %}
+
 <div class="clear"></div>
 
 <!--COMENTARIOS -->
