--- a/cyclope/core/collections/templates/collections/collection_categories_hierarchy.html
+++ b/cyclope/core/collections/templates/collections/collection_categories_hierarchy.html
@@ -1,47 +1,10 @@
 {% extends host_template %}
 
 {% block content %}
-<script type="text/javascript">
-    var hide_children= function (el){
-        $(el).children('ul').css('display', 'none');
-    }
-
-    var show_children = function (el){
-        $(el).children('ul').css('display', 'block');
-    }
-
-    jQuery(document).ready(function(){
-        var menu_align = '{{ align }}';
-
-        if (menu_align != 'DISABLED'){
-            // Hide children of collapsible menus
-            $('#{{ collection_slug }}_collection_{{ region_name }} .has_children').each(function(){
-                hide_children($(this).parent());
-            });
-
-            // Expand children on mouse enter
-            $('#{{ collection_slug }}_collection_{{ region_name }} ul li').mouseenter(function() {
-                show_children($(this));
-            });
-
-            if (menu_align == 'HORIZONTAL'){
-                $('#{{ collection_slug }}_collection_{{ region_name }} ul li').mouseleave(function() {
-                    hide_children($(this));
-                });
-            }
-            // Collapse whe whole menu if the alignment is VERTICAL
-            else{
-                $('#{{ collection_slug }}_collection_{{ region_name }}').mouseleave(function(){
-                    hide_children($('#{{ collection_slug }}_collection_{{ region_name }} .has_children').parent());
-                });
-            }
-        }
-    });
-</script>
 <div class="collection_categories_hierarchy">
-<ul>
+  <ul class="cyclope_menu {{ align|lower }}">
   {{ categories|unordered_list }}
-</ul>
+  </ul>
 </div>
 {% endblock content%}
 
