--- a/cyclope/templates/search/search.html
+++ b/cyclope/templates/search/search.html
@@ -21,7 +21,7 @@
             {# show teaser_views for all results objects #}
             {% join result.object.get_app_label  "/" result.object.get_object_name "_teaser.html" as template_path %}
             {% alias result.object as result.object.get_object_name %}
-            {% include template_path %}
+            {% include template_path with current_object=result.object host_template="cyclope/inline_view.html" %}
 
         {% empty %}
             <p>{% trans "No results found." %}</p>
